tests/sksl/errors/Ossfuzz44551.glsl
### Compilation failed:

error: 6: type mismatch: '+' cannot operate on 'int', '<INVALID>'
x+x+x+x+x-+x+x+x+-x+x+++x-+ x+7+x +x-+x+x+x+++x-+x-+x+x* x+7;x+
                                                             ^^...
error: 8: expected ';', but found 'o'
 void o(){{{{{{{{{{{{{{{{{{{{{{{{{ 3x+
      ^
2 errors
